K8s_deployments/nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: engine
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP # Change to ClusterIP or NodePort if needed
